--- a/examples/10-styles.css
+++ b/examples/10-styles.css
@@ -87,6 +87,10 @@ form input {
     border-top: 1px solid #e9e9e9;
 }
 
+.chat-message strong {
+	margin-right: 0.5rem;
+}
+
 .username-form-container {
     transition: opacity 0.15s linear 0.55s;
     position: absolute;
